<?xml version="1.0"?>
<package>
  <name>test_metapackage</name>
  <version>0.0.0</version>
  <description>
    just a test
  </description>
  <maintainer email="wunailiang@gmail.com">wunailiang</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/test_metapackage</url>
  <url type="repository">https://github.com/WuNL/test_metapackage.git</url>

  <author>wunailiang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>driver_base</run_depend>
  <run_depend>timestamp_tools</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
